--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "multisig-frontend",
   "version": "0.0.0",
+  "homepage": "https://ape-dev-cs.github.io/multisig-gui/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -8,7 +9,9 @@
     "lint:fix": "eslint ./src --ext .jsx,.js,.ts,.tsx --quiet --fix --ignore-path ./.gitignore",
     "lint:format": "prettier  --loglevel warn --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" ",
     "lint": "npm run lint:format && npm run lint:fix ",
-    "generate-types": "typechain --out-dir 'src/contracts' --target=ethers-v5 'src/abis/**/*.json'"
+    "generate-types": "typechain --out-dir 'src/contracts' --target=ethers-v5 'src/abis/**/*.json'",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@ethersproject/abi": "^5.5.0",
@@ -57,6 +60,7 @@
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "events": "^3.3.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.5.1",
     "typechain": "^6.0.5",
     "typescript": "^4.4.4",
